# ModelAssetLib

./: .gitignore  build.gradle  gradle.properties
.github/workflows/: build.yml
core/: build.gradle  gradle.properties  settings.gradle
core/rust/: Cargo.toml  README.md  build-debug.bat  build-debug.sh  build.bat  build.sh
core/rust/src/: lib.rs  util.rs
core/rust/src/constants/: opengl.rs
core/rust/src/jniimpl/: gltf.rs  image.rs
core/rust/src/util/: bits.rs  error_message.rs  gltf.rs  image.rs  jni.rs  mod.rs
core/rust/src/util/gltf/: mod.rs
core/rust/src/util/gltf/loaded/: material.rs  mesh.rs  mod.rs
core/src/main/kotlin/top/srcres/mods/modelassetlib/: ModelAssetLib.kt  NativeLibrary.kt  NativeRuntimeException.kt
core/src/main/kotlin/top/srcres/mods/modelassetlib/gltf/: DefaultGltf.kt  Gltf.kt  NativeCallbackGltf.kt
core/src/main/kotlin/top/srcres/mods/modelassetlib/image/: Image.kt  ImageFormat.kt
core/src/main/kotlin/top/srcres/mods/modelassetlib/jni/: INativeCallback.kt  NativeLibrary.kt  NativeRuntimeException.kt  OSType.kt  UnsupportedOSException.kt
core/src/main/kotlin/top/srcres/mods/modelassetlib/util/: MemoryUtilWrapper.kt
example/: build.gradle  gradle.properties  settings.gradle
example/src/main/kotlin/top/srcres/mods/malexample/: MALExample.kt
example/src/main/resources/assets/malexample/gltf/horus/: horus.gltf
rust/: build-debug.sh
rust/src/: lib.rs  util.rs
rust/src/util/: mod.rs
src/main/kotlin/top/srcres/mods/modelassetlib/: ModelAssetLib.kt  NativeLibrary.kt  UnsupportedOSException.kt
(+2 files in other folders)
