[package]
name = "modelassetlib-native"
version = "0.1.1"
authors = ["src_resources"]
edition = "2021"
description = "Native library for Minecraft mod ModelAssetLib."
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
gltf = "1.4.0"
anyhow = "1.0.81"
image = "0.25.1"
lazy_static = "1.4.0"
thiserror = "1.0.58"
nalgebra = "0.32.5"
